--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"gdoc": "node tasks/fetch-gdoc.js"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
+		"@newswire/doc-to-archieml": "^1.0.0",
 		"@sveltejs/adapter-auto": "^1.0.0",
 		"@sveltejs/kit": "^1.0.0",
 		"eslint": "^8.28.0",
@@ -21,5 +23,14 @@
 		"svelte": "^3.54.0",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"archieml": "^0.5.0",
+		"chart.js": "^4.2.0",
+		"chartjs-adapter-moment": "^1.0.1",
+		"moment": "^2.29.4",
+		"svelte-chartjs": "^3.1.2",
+		"vis-data": "^7.1.4",
+		"vis-timeline": "^7.7.0"
+	}
 }
