--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "metaverse-sk",
+	"name": "metaverse",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "vite dev",
@@ -25,9 +25,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource/newsreader": "^4.5.10",
 		"archieml": "^0.5.0",
 		"chart.js": "^4.2.0",
 		"chartjs-adapter-moment": "^1.0.1",
+		"gsap": "^3.11.4",
 		"moment": "^2.29.4",
 		"svelte-chartjs": "^3.1.2",
 		"vis-data": "^7.1.4",
