--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource/league-mono": "^4.5.3",
+		"@fontsource/league-mono-narrow": "^4.5.5",
 		"@fontsource/newsreader": "^4.5.10",
 		"archieml": "^0.5.0",
 		"chart.js": "^4.2.0",
