--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
 		"chart.js": "^4.2.0",
 		"chartjs-adapter-moment": "^1.0.1",
 		"gsap": "^3.11.4",
+		"lil-gui": "^0.18.1",
 		"moment": "^2.29.4",
 		"svelte-chartjs": "^3.1.2",
+		"three": "^0.130.0",
 		"vis-data": "^7.1.4",
 		"vis-timeline": "^7.7.0"
 	}
