--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"preview": "vite preview",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
-		"gdoc": "node tasks/fetch-gdoc.js"
+		"gdoc": "node tasks/fetch-gdoc.js",
+		"refs": "node tasks/fetch-references.js"
 	},
 	"devDependencies": {
 		"@fontsource/fira-mono": "^4.5.10",
@@ -32,6 +33,7 @@
 		"archieml": "^0.5.0",
 		"chart.js": "^4.2.0",
 		"chartjs-adapter-moment": "^1.0.1",
+		"citation-js": "^0.6.7",
 		"gsap": "^3.11.4",
 		"lil-gui": "^0.18.1",
 		"moment": "^2.29.4",
