--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
 		"@fontsource/fira-mono": "^4.5.10",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@newswire/doc-to-archieml": "^1.0.0",
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^4.0.0",
 		"svelte-lucide": "^0.5.2",
-		"vite": "^4.0.0"
+		"vite": "^5.0.0"
 	},
 	"type": "module",
 	"dependencies": {
